server/src/qasmv2/antlr/QasmParser.ts
// Generated from QasmParser.g4 by ANTLR 4.6-SNAPSHOT


import { Register, SymbolsTable } from './utils';
import { QasmLexer } from './QasmLexer';
import { ANTLRInputStream, CommonTokenStream } from 'antlr4ts'; 
import { SymbolTable, BuiltInTypeSymbol } from '../../tools/symbolTable'; 
import { SymbolTableBuilder, VariableSymbol, RegisterSymbol } from '../compiler/symbolTable';
import fs = require('fs');
import path = require('path');


import { ATN } from 'antlr4ts/atn/ATN';
import { ATNDeserializer } from 'antlr4ts/atn/ATNDeserializer';
import { FailedPredicateException } from 'antlr4ts/FailedPredicateException';
import { NotNull } from 'antlr4ts/Decorators';
import { NoViableAltException } from 'antlr4ts/NoViableAltException';
import { Override } from 'antlr4ts/Decorators';
import { Parser } from 'antlr4ts/Parser';
import { ParserRuleContext } from 'antlr4ts/ParserRuleContext';
import { ParserATNSimulator } from 'antlr4ts/atn/ParserATNSimulator';
import { ParseTreeListener } from 'antlr4ts/tree/ParseTreeListener';
import { ParseTreeVisitor } from 'antlr4ts/tree/ParseTreeVisitor';
import { RecognitionException } from 'antlr4ts/RecognitionException';
import { RuleContext } from 'antlr4ts/RuleContext';
import { RuleVersion } from 'antlr4ts/RuleVersion';
import { TerminalNode } from 'antlr4ts/tree/TerminalNode';
import { Token } from 'antlr4ts/Token';
import { TokenStream } from 'antlr4ts/TokenStream';
import { Vocabulary } from 'antlr4ts/Vocabulary';
import { VocabularyImpl } from 'antlr4ts/VocabularyImpl';

import * as Utils from 'antlr4ts/misc/Utils';

import { QasmParserListener } from './QasmParserListener';
import { QasmParserVisitor } from './QasmParserVisitor';


export class QasmParser extends Parser {
	public static readonly Comment=1;
	public static readonly WhiteSpace=2;
	public static readonly Real=3;
	public static readonly Int=4;
	public static readonly QasmDescriptor=5;
	public static readonly Include=6;
	public static readonly Qelib=7;
	public static readonly Qreg=8;
	public static readonly Creg=9;
	public static readonly Clean=10;
	public static readonly U=11;
	public static readonly Cx=12;
	public static readonly Sin=13;
	public static readonly Cos=14;
	public static readonly Tan=15;
	public static readonly Exp=16;
	public static readonly Ln=17;
	public static readonly Sqrt=18;
	public static readonly Measure=19;
	public static readonly Barrier=20;
	public static readonly Reset=21;
	public static readonly Opaque=22;
	public static readonly If=23;
	public static readonly Equals=24;
	public static readonly Assign=25;
	public static readonly Semi=26;
	public static readonly Comma=27;
	public static readonly LeftCurlyBrace=28;
	public static readonly RightCurlyBrace=29;
	public static readonly LeftBrace=30;
	public static readonly RightBrace=31;
	public static readonly LeftParen=32;
	public static readonly RightParen=33;
	public static readonly Pow=34;
	public static readonly Mult=35;
	public static readonly Div=36;
	public static readonly Sum=37;
	public static readonly Subs=38;
	public static readonly Pi=39;
	public static readonly Gate=40;
	public static readonly Library=41;
	public static readonly Id=42;
	public static readonly RULE_code = 0;
	public static readonly RULE_headers = 1;
	public static readonly RULE_includeLibrary = 2;
	public static readonly RULE_sentences = 3;
	public static readonly RULE_clean = 4;
	public static readonly RULE_sentence = 5;
	public static readonly RULE_definition = 6;
	public static readonly RULE_expression = 7;
	public static readonly RULE_conditional = 8;
	public static readonly RULE_condition = 9;
	public static readonly RULE_gateDefinition = 10;
	public static readonly RULE_opaqueDefinition = 11;
	public static readonly RULE_gateDefinitionArguments = 12;
	public static readonly RULE_opaqueDefinitionArguments = 13;
	public static readonly RULE_paramsList = 14;
	public static readonly RULE_body = 15;
	public static readonly RULE_bodyExpression = 16;
	public static readonly RULE_paramsListBody = 17;
	public static readonly RULE_exp = 18;
	public static readonly RULE_unaryOp = 19;
	public static readonly RULE_measure = 20;
	public static readonly RULE_qubit = 21;
	public static readonly RULE_cbit = 22;
	public static readonly RULE_customArglist = 23;
	public static readonly RULE_paramsListNumber = 24;
	public static readonly RULE_qubitAndQregList = 25;
	public static readonly RULE_qbitOrQreg = 26;
	public static readonly RULE_cxGate = 27;
	public static readonly RULE_barrierGate = 28;
	public static readonly RULE_qubitList = 29;
	public static readonly RULE_resetGate = 30;
	public static readonly ruleNames: string[] = [
		"code", "headers", "includeLibrary", "sentences", "clean", "sentence", 
		"definition", "expression", "conditional", "condition", "gateDefinition", 
		"opaqueDefinition", "gateDefinitionArguments", "opaqueDefinitionArguments", 
		"paramsList", "body", "bodyExpression", "paramsListBody", "exp", "unaryOp", 
		"measure", "qubit", "cbit", "customArglist", "paramsListNumber", "qubitAndQregList", 
		"qbitOrQreg", "cxGate", "barrierGate", "qubitList", "resetGate"
	];

	private static readonly _LITERAL_NAMES: (string | undefined)[] = [
		undefined, undefined, undefined, undefined, undefined, undefined, "'include'", 
		"'QELIB.INC'", "'qreg'", "'creg'", "'clean'", "'U'", "'CX'", "'sin'", 
		"'cos'", "'tan'", "'exp'", "'ln'", "'sqrt'", "'measure'", "'barrier'", 
		"'reset'", "'opaque'", "'if'", "'=='", "'->'", "';'", "','", "'{'", "'}'", 
		"'['", "']'", "'('", "')'", "'^'", "'*'", "'/'", "'+'", "'-'", "'pi'", 
		"'gate'"
	];
	private static readonly _SYMBOLIC_NAMES: (string | undefined)[] = [
		undefined, "Comment", "WhiteSpace", "Real", "Int", "QasmDescriptor", "Include", 
		"Qelib", "Qreg", "Creg", "Clean", "U", "Cx", "Sin", "Cos", "Tan", "Exp", 
		"Ln", "Sqrt", "Measure", "Barrier", "Reset", "Opaque", "If", "Equals", 
		"Assign", "Semi", "Comma", "LeftCurlyBrace", "RightCurlyBrace", "LeftBrace", 
		"RightBrace", "LeftParen", "RightParen", "Pow", "Mult", "Div", "Sum", 
		"Subs", "Pi", "Gate", "Library", "Id"
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(QasmParser._LITERAL_NAMES, QasmParser._SYMBOLIC_NAMES, []);

	@Override
	@NotNull
	public get vocabulary(): Vocabulary {
		return QasmParser.VOCABULARY;
	}

	@Override
	public get grammarFileName(): string { return "QasmParser.g4"; }

	@Override
	public get ruleNames(): string[] { return QasmParser.ruleNames; }

	@Override
	public get serializedATN(): string { return QasmParser._serializedATN; }


	    
	private symbolTable = SymbolTableBuilder.build();

	private declareQreg(registerName: Token, size: Token): void {
	    let variableSymbol = this.symbolTable.lookup(registerName.text);
	    if (variableSymbol == null) {
	        let qregSymbol = this.symbolTable.lookup('Qreg') as BuiltInTypeSymbol;
	        let newSymbol = new RegisterSymbol(registerName.text, qregSymbol, +size.text);

	        this.symbolTable.define(newSymbol);
	    } else {
	        let message = `There is another declaration with name ${registerName.text}`;
	        this.notifyErrorListeners(message, registerName, null);
	    }
	}

	private declareCreg(registerName: Token, size: Token): void {
	    let variableSymbol = this.symbolTable.lookup(registerName.text);
	    if (variableSymbol == null) {
	        let cregSymbol = this.symbolTable.lookup('Creg') as BuiltInTypeSymbol;
	        let newSymbol = new RegisterSymbol(registerName.text, cregSymbol, +size.text);

	        this.symbolTable.define(newSymbol);
	    } else {
	        let message = `There is another declaration with name ${registerName.text}`;
	        this.notifyErrorListeners(message, registerName, null);
	    }
	}

	private declareGate(gateName: Token): void {
	    let variableSymbol = this.symbolTable.lookup(gateName.text);
	    if (variableSymbol == null) {
	        let gateSymbol = this.symbolTable.lookup('Gate') as BuiltInTypeSymbol;
	        let newSymbol = new VariableSymbol(gateName.text, gateSymbol);

	        this.symbolTable.define(newSymbol);
	    } else {
	        let message = `There is another declaration with name ${gateName.text}`;
	        this.notifyErrorListeners(message, gateName, null);
	    }
	}

	private declareOpaque(opaqueName: Token): void {
	    let variableSymbol = this.symbolTable.lookup(opaqueName.text);
	    if (variableSymbol == null) {
	        let opaqueSymbol = this.symbolTable.lookup('Opaque') as BuiltInTypeSymbol;
	        let newSymbol = new VariableSymbol(opaqueName.text, opaqueSymbol);

	        this.symbolTable.define(newSymbol);
	    } else {
	        let message = `There is another declaration with name ${opaqueName.text}`;
	        this.notifyErrorListeners(message, opaqueName, null);
	    }
	}

	private verifyQregReference(id: Token, position?: Token) {
	    let variableSymbol = this.symbolTable.lookup(id.text);
	    if (variableSymbol) {
	        let qregSymbol = this.symbolTable.lookup('Qreg') as BuiltInTypeSymbol;
	        if (variableSymbol.type != qregSymbol) {
	            let message = `Wrong type at ${id.text}, expecting a ${qregSymbol.getName()}`;
	            this.notifyErrorListeners(message, id, null);
	        }

	        if (position) {
	            let register = variableSymbol as RegisterSymbol;
	            let selectedPosition = +position.text;
	            if (selectedPosition >= register.size) {
	                let message = `Index out of bound at register ${id.text}`;
	                this.notifyErrorListeners(message, position, null);
	            }
	        }
	    } else {
	        let message = `Qubit ${id.text} is not previously defined`;
	        this.notifyErrorListeners(message, id, null);
	    }
	}

	private verifyCregReference(id: Token, position?: Token) {
	    let variableSymbol = this.symbolTable.lookup(id.text);
	    if (variableSymbol) {
	        let cregSymbol = this.symbolTable.lookup('Creg') as BuiltInTypeSymbol;
	        if (variableSymbol.type != cregSymbol) {
	            let message = `Wrong type at ${id.text}, expecting a ${cregSymbol.getName()}`;
	            this.notifyErrorListeners(message, id, null);
	        }

	        if (position) {
	            let register = variableSymbol as RegisterSymbol;
	            let selectedPosition = +position.text;
	            if (selectedPosition >= register.size) {
	                let message = `Index out of bound at register ${id.text}`;
	                this.notifyErrorListeners(message, position, null);
	            }
	        }
	    } else {
	        let message = `Cbit ${id.text} is not previously defined`;
	        this.notifyErrorListeners(message, id, null);
	    }
	}

	private verifyMeasureInvocation(quantumRegister: Token, classicRegister: Token): void {
	    let qregSymbol = this.symbolTable.lookup(quantumRegister.text) as RegisterSymbol;
	    let cregSymbol = this.symbolTable.lookup(classicRegister.text) as RegisterSymbol;

	    if (qregSymbol && cregSymbol && qregSymbol.size > cregSymbol.size) {
	        let message = `The quatum register ${quantumRegister.text} cannot be mapped to a smaller classic register ${classicRegister.text}`;
	        this.notifyErrorListeners(message, quantumRegister, null);
	    }
	}

	private verifyGateInvocation(id: Token): void {
	    let gateSymbol = this.symbolTable.lookup(id.text);

	    if (gateSymbol == null) {
	        let message = `The symbol ${id.text} is not previously defined`;
	        this.notifyErrorListeners(message, id, null);
	    }
	}

	declaredVariables(): string[] {
	    return this.symbolTable.definedSymbols();
	}
	 

	getSymbolTable(): SymbolTable {
	    return this.symbolTable;
	}

	private buildQasmParser(input: string): QasmParser {
	    let inputStream = new ANTLRInputStream(input);
	    let lexer = new QasmLexer(inputStream);
	    let tokenStream = new CommonTokenStream(lexer);
	    let parser = new QasmParser(tokenStream);

	    return parser;
	}

	private processLibrary(libraryName: string) {
	    let libraryPath = path.join(__dirname, '..', 'libs', libraryName);
	    let text = fs.readFileSync(libraryPath, 'utf8');
	    let parser = this.buildQasmParser(text);

	    parser.code();

	    this.symbolTable = parser.getSymbolTable();
	}


	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(QasmParser._ATN, this);
	}
	@RuleVersion(0)
	public code(): CodeContext {
		let _localctx: CodeContext = new CodeContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, QasmParser.RULE_code);
		try {
			this.state = 67;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case QasmParser.EOF:
			case QasmParser.Qreg:
			case QasmParser.Creg:
			case QasmParser.Cx:
			case QasmParser.Measure:
			case QasmParser.Barrier:
			case QasmParser.Reset:
			case QasmParser.Opaque:
			case QasmParser.If:
			case QasmParser.Gate:
			case QasmParser.Id:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 62;
				this.sentences();
				}
				break;
			case QasmParser.QasmDescriptor:
			case QasmParser.Include:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 63;
				this.headers();
				this.state = 64;
				this.sentences();
				}
				break;
			case QasmParser.Clean:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 66;
				this.clean();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public headers(): HeadersContext {
		let _localctx: HeadersContext = new HeadersContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, QasmParser.RULE_headers);
		try {
			this.state = 73;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input,1,this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 69;
				this.match(QasmParser.QasmDescriptor);
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 70;
				this.match(QasmParser.QasmDescriptor);
				this.state = 71;
				this.includeLibrary();
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 72;
				this.includeLibrary();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public includeLibrary(): IncludeLibraryContext {
		let _localctx: IncludeLibraryContext = new IncludeLibraryContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, QasmParser.RULE_includeLibrary);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 75;
			this.match(QasmParser.Include);
			this.state = 76;
			_localctx._Library = this.match(QasmParser.Library);
			this.state = 77;
			this.match(QasmParser.Semi);
			 this.processLibrary((_localctx._Library!=null?_localctx._Library.text:undefined)); 
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public sentences(): SentencesContext {
		let _localctx: SentencesContext = new SentencesContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, QasmParser.RULE_sentences);
		try {
			this.state = 84;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input,2,this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 80;
				this.sentence();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 81;
				this.sentence();
				this.state = 82;
				this.sentences();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public clean(): CleanContext {
		let _localctx: CleanContext = new CleanContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, QasmParser.RULE_clean);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 86;
			this.match(QasmParser.Clean);
			this.state = 87;
			this.match(QasmParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public sentence(): SentenceContext {
		let _localctx: SentenceContext = new SentenceContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, QasmParser.RULE_sentence);
		try {
			this.state = 93;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case QasmParser.Qreg:
			case QasmParser.Creg:
			case QasmParser.Opaque:
			case QasmParser.Gate:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 89;
				this.definition();
				}
				break;
			case QasmParser.Cx:
			case QasmParser.Measure:
			case QasmParser.Barrier:
			case QasmParser.Reset:
			case QasmParser.Id:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 90;
				this.expression();
				}
				break;
			case QasmParser.If:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 91;
				this.conditional();
				}
				break;
			case QasmParser.EOF:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 92;
				this.match(QasmParser.EOF);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public definition(): DefinitionContext {
		let _localctx: DefinitionContext = new DefinitionContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, QasmParser.RULE_definition);
		try {
			this.state = 113;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case QasmParser.Qreg:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 95;
				this.match(QasmParser.Qreg);
				this.state = 96;
				_localctx._Id = this.match(QasmParser.Id);
				this.state = 97;
				this.match(QasmParser.LeftBrace);
				this.state = 98;
				_localctx._size = this.match(QasmParser.Int);
				this.state = 99;
				this.match(QasmParser.RightBrace);
				this.state = 100;
				this.match(QasmParser.Semi);
				 this.declareQreg(_localctx._Id, _localctx._size); 
				}
				break;
			case QasmParser.Creg:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 102;
				this.match(QasmParser.Creg);
				this.state = 103;
				_localctx._Id = this.match(QasmParser.Id);
				this.state = 104;
				this.match(QasmParser.LeftBrace);
				this.state = 105;
				_localctx._size = this.match(QasmParser.Int);
				this.state = 106;
				this.match(QasmParser.RightBrace);
				this.state = 107;
				this.match(QasmParser.Semi);
				 this.declareCreg(_localctx._Id, _localctx._size); 
				}
				break;
			case QasmParser.Gate:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 109;
				this.gateDefinition();
				}
				break;
			case QasmParser.Opaque:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 110;
				this.opaqueDefinition();
				this.state = 111;
				this.match(QasmParser.Semi);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public expression(): ExpressionContext {
		let _localctx: ExpressionContext = new ExpressionContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, QasmParser.RULE_expression);
		try {
			this.state = 130;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case QasmParser.Measure:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 115;
				this.measure();
				this.state = 116;
				this.match(QasmParser.Semi);
				}
				break;
			case QasmParser.Id:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 118;
				this.customArglist();
				this.state = 119;
				this.match(QasmParser.Semi);
				}
				break;
			case QasmParser.Cx:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 121;
				this.cxGate();
				this.state = 122;
				this.match(QasmParser.Semi);
				}
				break;
			case QasmParser.Barrier:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 124;
				this.barrierGate();
				this.state = 125;
				this.match(QasmParser.Semi);
				}
				break;
			case QasmParser.Reset:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 127;
				this.resetGate();
				this.state = 128;
				this.match(QasmParser.Semi);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public conditional(): ConditionalContext {
		let _localctx: ConditionalContext = new ConditionalContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, QasmParser.RULE_conditional);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 132;
			this.condition();
			this.state = 133;
			this.expression();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public condition(): ConditionContext {
		let _localctx: ConditionContext = new ConditionContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, QasmParser.RULE_condition);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 135;
			this.match(QasmParser.If);
			this.state = 136;
			this.match(QasmParser.LeftParen);
			this.state = 137;
			_localctx._Id = this.match(QasmParser.Id);
